--- a/css/style.css
+++ b/css/style.css
@@ -214,3 +214,14 @@ h1 {
 	position: relative;
 	display: block;
 }
+
+#error_msg {
+	width: 50%;
+	margin: 5px auto;
+	height: 30px;
+	border: 1px solid #FF0000;
+	background-color: #FFB9B8;
+	color: #FF0000;
+	text-align: center;
+	padding-top: 10px;
+}
